feat(client): install @cosmjs library

--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cosmjs/cosmwasm-stargate": "^0.30.1",
+    "@cosmjs/proto-signing": "^0.30.1",
+    "@cosmjs/stargate": "^0.30.1",
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
@@ -20,6 +23,7 @@
     "typescript": "5.0.3"
   },
   "devDependencies": {
+    "@keplr-wallet/types": "^0.11.56",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwind-styled-components": "^2.2.0",
