--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@cosmjs/proto-signing": "^0.30.1",
     "@cosmjs/stargate": "^0.30.1",
     "@headlessui/react": "^1.7.13",
+    "@hookform/resolvers": "^3.0.1",
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
@@ -24,7 +25,8 @@
     "react-hook-form": "^7.43.9",
     "react-select": "^5.7.2",
     "recoil": "^0.7.7",
-    "typescript": "5.0.3"
+    "typescript": "5.0.3",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@keplr-wallet/types": "^0.11.56",
