--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
+    "big.js": "^6.2.1",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "lodash": "^4.17.21",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@keplr-wallet/types": "^0.11.56",
+    "@types/big.js": "^6.1.6",
     "@types/lodash": "^4.14.194",
     "autoprefixer": "^10.4.14",
     "gh-pages": "^5.0.0",
